tests/netperf/isilon_10G/udp_000/outgoing.txt
zephram-1# netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh netserver
^C
10.3 12.1 12.9 14.7 15.2 16.9 17.1 16.8 18.9 18.7 20.8 20.3 22.0 23.2 22.7 22.2 23.7 23.3 24.9 24.5 26.3 28.3 27.1 26.3 28.2 27.1 28.9 28.3 29.7 28.8 30.4 29.1 31.0 29.9 32.1 31.0 32.8 32.0 33.3 32.1 33.9 32.4 34.2 32.9 34.6 33.2 34.6 32.8 34.4 32.8 34.7 33.2
average: 26.4923
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 0.0
[ipfwd] starting
current:  9.662%, error:  9.7%, probability:  0.000%
current:  8.887%, error:  10.4%, probability:  0.000%
current:  9.174%, error:  0.3%, probability:  0.000%
current:  10.437%, error:  1.3%, probability:  0.000%
current:  13.605%, error:  3.2%, probability:  0.000%
current:  13.513%, error:  0.1%, probability:  0.000%
current:  13.428%, error:  0.1%, probability:  0.000%
^C
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# netperf -l 30 -H 7.7.7.2 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 7.7.7.2 (7.7.7.2) port 0 AF_INET
Socket  Message  Elapsed      Messages                
Size    Size     Time         Okay Errors   Throughput
bytes   bytes    secs            #      #   10^6bits/sec

 16384   16384   30.00     2070324      0    9045.31
512000           30.00     2067509           9033.01

zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh netperf             
^C
12.2 15.2 19.5 22.0 26.3 27.9 32.2 33.4 37.9 38.5 42.1 46.5 46.4 50.8 50.3 54.8 54.2 58.5 57.4 61.9 60.7 65.2 63.9 68.5 66.7 71.0 68.8 73.4 70.8 75.3 79.2 76.4 80.7 77.9 82.4 79.1 83.4 79.9 84.4 80.8 85.3 81.5 86.0 82.1 86.4 90.6 86.6 91.1 87.0 91.5 87.2 91.4 87.1 91.7 87.5 92.1
average: 65.7429
zephram-2# 

